# Rust-ReactJs-chatapp

./: README.md
backend/: Cargo.toml
backend/src/: app.rs  config.rs  main.rs
backend/src/handlers/: ws_handler.rs
backend/src/routes/: mod.rs  ws_routes.rs
backend/src/services/: chat_service.rs
backend/src/utils/: state.rs
frontend/src/: App.jsx
frontend/src/components/: ChatApp.jsx
